# plume-examples

./: AUTHORS  CMakeLists.txt  README.md
data/: CMakeLists.txt  plume-config.json.in
nwp_emulator/: CMakeLists.txt  nwp_emulator.F90  nwp_emulator.cc  nwp_utils.F90  nwp_utils.cc  nwp_utils.h  run_nwp_emulator.sh.in
plugins/: CMakeLists.txt
plugins/abl_extractor/: CMakeLists.txt  abl_extractor.cc  abl_extractor.h
plugins/abl_extractor/scripts/: plot_wt.py
plugins/abl_extractor_fort/: CMakeLists.txt  abl_extractor.F90.in
plugins/dummy_plugin/: CMakeLists.txt  dummy.cc  dummy.h
plugins/dummy_plugin_fort/: CMakeLists.txt  dummy.F90.in
plugins/uv_bound_check/: CMakeLists.txt  uv_bound_check.cc  uv_bound_check.h
plugins/uv_bound_check_fort/: CMakeLists.txt  uv_bound_check_fort.F90.in
plugins/wind_turbine/: CMakeLists.txt  wind_turbine.cc  wind_turbine.h
plugins/wind_turbine_fort/: CMakeLists.txt  wind_turbine.F90.in
